# assignment3

./: CMakeLists.txt  Makefile  README.txt
include/: Display.h  G308_Geometry.h  G308_ImageLoader.h  Material.h  Skybox.h  define.h
shaders/: phong_bump.frag  skybox.vert
src/: Display.cpp  G308_Geometry.cpp  G308_ImageLoader.cpp  Material.cpp  Skybox.cpp  main.cpp
